--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
     <string name="app_name">BSScanner</string>
     <string name="ble_not_supported">BLE not supported</string>
     <string name="bt_not_supported">Bluetooth not supported</string>
-    <string name="bt_not_enabled">not enabled</string>
+    <string name="bt_not_enabled">Not enabled</string>
     <string name="label_ibeacon">iBeacon</string>
-    <string name="label_not_ibeacon">not iBeacon</string>
+    <string name="label_not_ibeacon">Not iBeacon</string>
+    <string name="label_wifi">WiFi</string>
+    <string name="press_again">Press again</string>
     <!-- Scan -->
     <string name="action_clear">CLR</string>
     <string name="action_scan">=====SCAN=====</string>
@@ -25,12 +27,20 @@
     <string name="pitch"> Pitch:</string>
     <string name="roll"> Roll:</string>
     <!-- activity_label -->
+    <string name="here">Here</string>
     <string name="phone_attitude"> Attitude:</string>
     <string name="point_num"> No.</string>
     <string name="scan_repeat"> Scan repeat count:</string>
     <string name="scan_time"> Scan time:</string>
     <string name="scanned_ap"> AP:</string>
-    <string name="white_list"> White List:</string>
-    <string name="white_list_bs"> White List(BS)</string>
-    <string name="white_list_bs_value">00:00:00:00:00:00,00:11:22:33:44:55,00:01:23:45:67:89,</string>
+    <string name="white_list">White List:</string>
+    <string name="white_list_bs"> White List(BS):</string>
+    <string name="white_list_wifi">White List(WiFi):</string>
+    <string name="white_list_wifi_value"></string>
+    <string name="white_list_bs_value"></string>
+    <!-- speech -->
+    <string name="speech_started">Started</string>
+    <string name="speech_stopped">Stopped</string>
+    <string name="speech_move">Please move</string>
+    <string name="speech_move_after_check">Please move after checking</string>
 </resources><!-- Copyright (c) 2015 YA <ya.androidapp@gmail.com> All rights reserved. -->
